feature und signalstellung zusammengeführt

--- a/start.html
+++ b/start.html
@@ -192,14 +192,14 @@
                   <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab">
                      Signalstellung
                   </button>
-                  <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab">
+                  <button class="nav-link" id="navFeatures-tab" data-bs-toggle="tab" data-bs-target="#navFeatures" type="button" role="tab">
                      Einstellungen
                   </button>
                </div>
             </nav>
             <div class="tab-content" id="nav-tabContent">
-               <div class="tab-pane show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab"></div>
-               <div class="tab-pane" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab"></div>
+               <div class="tab-pane show active" id="nav-home" role="tabpanel"></div>
+               <div class="tab-pane" id="navFeatures" role="tabpanel"></div>
             </div>
          </div>
       </div>
