--- a/start.html
+++ b/start.html
@@ -23,14 +23,14 @@
       <script src="code/preLoader.js?02"></script>
       <script src="code/signaling.js?03"></script>
 
-      <script src="code/tools.js?02"></script>
+      <script src="code/tools.js?03"></script>
       <script src="code/generic_object.js?01"></script>
       <script src="code/train.js?02"></script>
-      <script src="code/track.js?02"></script>
-      <script src="code/signal.js?03"></script>
-      <script src="code/trackRendering_basic.js?02"></script>
-      <script src="code/trackRendering_textured.js?02"></script>
-      <script src="code/start.js?02"></script>
+      <script src="code/track.js?03"></script>
+      <script src="code/signal.js?04"></script>
+      <script src="code/trackRendering_basic.js?03"></script>
+      <script src="code/trackRendering_textured.js?03"></script>
+      <script src="code/start.js?03"></script>
 
       <style type="text/css"></style>
       <script></script>
@@ -279,7 +279,7 @@
                         <div class="card">
                            <div class="card-header">Zweigleisig Streck</div>
                            <div class="card-body">
-                              <p class="card-text">Ein Bahnhof an einer zweigleisigen Strecke.</p>
+                              <p class="card-text">Mehere Bahnhöfe an einer zweigleisigen Strecke.</p>
                            </div>
                            <div class="card-footer d-grid" style="background-color: white; border-top: none">
                               <button href="#" id="btnLoad2Gleisig" class="btn btn-sm btn-primary">Start</button>
@@ -290,7 +290,7 @@
                         <div class="card">
                            <div class="card-header">Eingleisige Strecke</div>
                            <div class="card-body">
-                              <p class="card-text">Mehere Bahnhöfe an einer zweigleisigen Strecke.</p>
+                              <p class="card-text">Mehere Bahnhöfe an einer eingleisigen Strecke.</p>
                            </div>
                            <div class="card-footer d-grid" style="background-color: white; border-top: none">
                               <button class="btn btn-sm btn-primary" disabled>Start</button>
