--- a/www/start.html
+++ b/www/start.html
@@ -43,70 +43,72 @@
          <p style="font-family: condenced">dummy to load font face</p>
       </div>
 
-      <div id="toolbar" class="navbar-dark rounded-pill navbar-expand-lg ">
+      <div id="toolbar" class="navbar-dark rounded-pill navbar-expand-lg">
          <a id="navbarBrand" class="navbar-brand" href="start.html"><img src="logo.svg" alt="Logo" width="80" height="80" />Bahn Baukasten</a>
-         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+         <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarTogglerDemo02"
+            aria-controls="navbarTogglerDemo02"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+         >
             <span class="navbar-toggler-icon"></span>
-          </button>
-         
-            <div class="btn-group" role="group">
-               <input type="radio" class="btn-check" name="btnEditMode" id="btnDrawTracks" autocomplete="off" checked />
-               <label class="btn btn-secondary btn-nav" for="btnDrawTracks"><i class="bi bi-tools"></i><span>Bearbeiten</span></label>
+         </button>
+         <span style="width:100px" class="nav-spacer"></span>
+         <div class="btn-group" role="group">
+            <input type="radio" class="btn-check" name="btnEditMode" id="btnDrawTracks" autocomplete="off" checked />
+            <label class="btn btn-secondary btn-nav" for="btnDrawTracks"><i class="bi bi-tools"></i><span>Bearbeiten</span></label>
 
-               <input type="radio" class="btn-check" name="btnEditMode" id="btnPlay" autocomplete="off" />
-               <label class="btn btn-secondary btn-nav" for="btnPlay"><i class="bi bi-play-fill"></i><span>Fahren</span></label>
-            </div>            
-            <span class="nav-spacer"></span>
-            <button id="btnUndo" type="button" class="btn btn-secondary btn-nav" title="Rückgängig">
-               <i class="bi bi-arrow-counterclockwise"></i>
+            <input type="radio" class="btn-check" name="btnEditMode" id="btnPlay" autocomplete="off" />
+            <label class="btn btn-secondary btn-nav" for="btnPlay"><i class="bi bi-play-fill"></i><span>Fahren</span></label>
+         </div>
+         <span class="nav-spacer"></span>
+         <button id="btnUndo" type="button" class="btn btn-secondary btn-nav" title="Rückgängig">
+            <i class="bi bi-arrow-counterclockwise"></i>
+         </button>
+         <button id="btnDraw" type="button" class="btn btn-secondary btn-nav" data-bs-toggle="button" title="Zeichnen">
+            <i class="bi bi-brush"></i>
+         </button>
+         <button id="btnClear" type="button" class="btn btn-secondary btn-nav" title="alles entfernen">
+            <i class="bi bi-trash"></i>
+         </button>
+         <button id="btnCenter" type="button" class="btn btn-secondary btn-nav" title="Ansicht zentrieren">
+            <i class="bi bi-bullseye"></i>
+         </button>
+         <button id="btnImage" type="button" class="btn btn-secondary btn-nav" title="Ansicht als Bild herunterladen">
+            <i class="bi bi-camera"></i>
+         </button>
+         <span class="nav-spacer"></span>
+         <div class="dropdown">
+            <button
+               class="btn btn-secondary dropdown-toggle btn-nav"
+               type="button"
+               id="btnOptions"
+               data-bs-toggle="dropdown"
+               data-bs-auto-close="outside"
+               title="weitere Optionen"
+            >
+               <i class="bi bi-sliders"></i>
+               <span>Optionen</span>
             </button>
-            <button id="btnDraw" type="button" class="btn btn-secondary btn-nav" data-bs-toggle="button" title="Zeichnen">
-               <i class="bi bi-brush"></i>
-            </button>
-            <button id="btnClear" type="button" class="btn btn-secondary btn-nav" title="alles entfernen">
-               <i class="bi bi-trash"></i>
-            </button>
-            <button id="btnCenter" type="button" class="btn btn-secondary btn-nav" title="Ansicht zentrieren">
-               <i class="bi bi-bullseye"></i>
-            </button>
-            <button id="btnImage" type="button" class="btn btn-secondary btn-nav" title="Ansicht als Bild herunterladen">
-               <i class="bi bi-camera"></i>
-            </button>
-            <span class="nav-spacer"></span>
-            <div class="dropdown">
-               <button
-                  class="btn btn-secondary dropdown-toggle btn-nav"
-                  type="button"
-                  id="btnOptions"
-                  data-bs-toggle="dropdown"
-                  data-bs-auto-close="outside"
-                  title="weitere Optionen"
+            <div class="dropdown-menu" id="DropDownOptions" style="min-width: 14rem">
+               <span class="dropdown-item-text">
+                  <div class="form-check form-switch">
+                     <input class="form-check-input" type="checkbox" role="switch" id="switch_renderer" /><label
+                        class="form-check-label"
+                        for="switch_renderer"
+                        >vereinfachte Ansicht</label
+                     >
+                  </div></span
                >
-                  <i class="bi bi-sliders"></i>
-                  <span>Optionen</span>
-               </button>
-               <div class="dropdown-menu" id="DropDownOptions" style="min-width: 14rem">
-                  <span class="dropdown-item-text">
-                     <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" role="switch" id="switch_renderer" /><label
-                           class="form-check-label"
-                           for="switch_renderer"
-                           >vereinfachte Ansicht</label
-                        >
-                     </div></span
-                  >
-               </div>
             </div>
-         
+         </div>
+
          <div class="d-flex ms-auto" style="gap: 10px; padding-right: 1rem">
             <div class="dropdown">
-               <button
-                  class="btn btn-primary rounded-pill"
-                  type="button"
-                  id="btnAdd"
-                  data-bs-toggle="dropdown"
-                  title="Sachen hinzufügen"
-               >
+               <button class="btn btn-primary rounded-pill" type="button" id="btnAdd" data-bs-toggle="dropdown" title="Sachen hinzufügen">
                   <i class="bi bi-plus-circle"></i>
                </button>
 
@@ -303,7 +305,7 @@
                               <p class="card-text">Mehere Bahnhöfe an einer eingleisigen Strecke.</p>
                            </div>
                            <div class="card-footer d-grid" style="background-color: white; border-top: none">
-                              <button class="btn btn-sm btn-primary"  id="btnLoad1Gleisig" data="1gleisig" >Start</button>
+                              <button class="btn btn-sm btn-primary" id="btnLoad1Gleisig" data="1gleisig">Start</button>
                            </div>
                         </div>
                      </div>
