--- a/www/index.html
+++ b/www/index.html
@@ -179,30 +179,14 @@
          <div class="content" id="impressum">
             <h4>Impressum</h4>
             <p>
-               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eleifend eleifend nisl, eu mollis ante mattis a. Quisque libero arcu,
-               interdum in efficitur non, varius vitae lacus. Nam eu mi a lectus fringilla efficitur. In at sem a purus hendrerit mattis et a sapien.
-               Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras ut purus dui. Pellentesque dapibus accumsan quam, sit amet luctus
-               dolor efficitur vel. Nulla fringilla, enim et tristique sagittis, orci augue malesuada erat, eget consequat leo sem eget ipsum. Cras
-               finibus vel mi quis auctor. Sed eget libero quam. Integer non aliquet sem, sed blandit odio. Nullam vel elit tincidunt diam fringilla
-               bibendum. Mauris tempus euismod turpis, non fermentum nisl varius ut. Aenean non fringilla urna. Maecenas fringilla vulputate risus,
-               sed blandit sem lobortis vitae. Etiam sed ipsum sit amet eros ornare consequat in mattis nibh. Phasellus ornare, odio a varius
-               lobortis, elit felis commodo neque, sit amet sodales diam justo quis quam. Maecenas ornare risus et maximus scelerisque. Nam pretium,
-               elit et pretium tempor, dui lacus viverra felis, a blandit arcu ipsum at nisl. Mauris sit amet turpis vitae eros rhoncus consequat.
-               Nullam iaculis posuere mauris, eget ultricies nulla sodales a. Praesent ut sapien at velit iaculis laoreet. Proin venenatis leo vitae
-               enim vehicula, sit amet hendrerit tortor vulputate. Curabitur quis purus suscipit, venenatis risus quis, porta turpis. Vivamus velit
-               felis, condimentum malesuada finibus ut, elementum eu justo. Duis consequat nibh faucibus, dictum lectus ac, molestie metus. Ut
-               consectetur in elit sed hendrerit. Curabitur in arcu rhoncus, maximus augue sed, tristique arcu. Nulla tempus dignissim ex at ornare.
-               Donec pretium elit neque, nec sodales orci ornare eu. Sed eget sapien eros. Nulla facilisi. Mauris arcu enim, tempor sed lectus nec,
-               imperdiet ultrices mi. Mauris eget posuere metus, et vestibulum ipsum. Pellentesque mollis placerat velit, eget vulputate turpis
-               imperdiet et. Vivamus dictum lacinia luctus. Maecenas hendrerit, tortor eu lacinia commodo, metus sapien laoreet quam, nec congue eros
-               sapien sit amet est. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla at tempus justo.
-               Nullam vestibulum vel ligula vel auctor. Pellentesque tristique fermentum scelerisque. Praesent et felis mauris. Maecenas eget
-               fringilla dui. Nulla fermentum efficitur eros, non blandit purus rutrum in. Mauris at feugiat augue, eget euismod neque. Lorem ipsum
-               dolor sit amet, consectetur adipiscing elit. Maecenas scelerisque, lorem ac bibendum aliquet, ligula ipsum cursus arcu, in volutpat sem
-               dui a ligula. Aenean convallis nunc a pellentesque maximus. Vestibulum ac metus aliquet, pharetra purus a, mollis nulla. Quisque
-               consequat sollicitudin dui nec consectetur. Etiam facilisis elit ipsum, sit amet tristique purus volutpat non. Curabitur nec ipsum
-               odio. Vivamus eleifend nunc in diam venenatis consectetur. Integer dolor justo, sagittis a mauris nec, ullamcorper ullamcorper libero.
-               Duis id mi non odio condimentum lobortis sit amet vitae eros.
+               Diese Anwendung ist ein Privates Projekt. Verantwortlich dafür ist <br><br>
+               Marcus Metzdorf<br>
+               <br><br>
+               Bitte beachtet, dass die Anwendung aktuell noch in der Entwicklung ist. Sie ist nicht vollständig und hat leider noch diverse Fehler.
+               Danksagungen und Ideen könnt Ihr gerne per Mail schreiben an:
+
+               <a href="mailto:signale@metzme.de">signale@metzme.de</a>
+
             </p>
          </div>
       </div>
