rendering improvement, safari compatibel

--- a/www/start.html
+++ b/www/start.html
@@ -51,10 +51,7 @@
             class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
-            data-bs-target="#navbarTogglerDemo02"
-            aria-controls="navbarTogglerDemo02"
-            aria-expanded="false"
-            aria-label="Toggle navigation">
+            data-bs-target="#navbarTogglerDemo02">
             <span class="navbar-toggler-icon"></span>
          </button>
          <span style="width: 100px" class="nav-spacer"></span>
@@ -332,7 +329,7 @@
             </div>
          </div>
       </div>
-      <div class="modal fade" id="loadModal" tabindex="-1" aria-hidden="true">
+      <div class="modal fade" id="loadModal" tabindex="-1">
          <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg modal-fullscreen-lg-down">
             <div class="modal-content">
                <div class="modal-header bg-light">
@@ -341,7 +338,7 @@
                      <h5 class="modal-title">Willkommen beim Gleisplan Zeichner</h5>
                      <p style="margin-bottom: auto">Wähle aus, wie du beginnen möchtest</p>
                   </div>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" ></button>
                </div>
                <div class="modal-body">
                   <div class="row">
