--- a/www/start.html
+++ b/www/start.html
@@ -82,6 +82,9 @@
          <button id="btnImage" type="button" class="btn btn-secondary btn-nav" title="Ansicht als Bild herunterladen">
             <i class="bi bi-camera"></i>
          </button>
+         <button id="btnRedraw" type="button" class="btn btn-secondary btn-nav" title="Ansicht als Bild herunterladen">
+            <i class="bi bi-arrow-clockwise"></i>
+         </button>
          <span class="nav-spacer"></span>
          <div class="dropdown">
             <button
